Updated bio with links, yeah?

--- a/app/views/static/bio.html.erb
+++ b/app/views/static/bio.html.erb
@@ -16,4 +16,15 @@
       The band are currently writing and recording in a makeshift home studio, and plan to start gigging soon.
     </p>
   </div>
+  <div class="post_title">
+    Links
+  </div>
+  <div class="post_body">
+    <p>
+    <ul>
+      <li><a href="http://myspace.com/barcodechannel">Barcode Channel on Myspace</a></li>
+      <li><a href="http://last.fm/music/Barcode+Channel">Barcode Channel on Last FM</a></li>
+    </ul>
+    </p>
+  </div>
 </div>
