Added email address to bio page

--- a/app/views/static/bio.html.erb
+++ b/app/views/static/bio.html.erb
@@ -27,4 +27,11 @@
     </ul>
     </p>
   </div>
+  <div class="post_title">
+    Contact
+  </div>
+  <div class="post_body">
+    If you'd like to get in contact with us, you can email us at: <br/>
+    <%= link_to 'barcodechannel@gmail.com', 'mailto:barcodechannel@gmail.com' %>
+  </div>
 </div>
