Updated biog page

--- a/app/views/static/bio.html.erb
+++ b/app/views/static/bio.html.erb
@@ -4,16 +4,10 @@
   </div>
   <div class="post_body">
     <p>
-      Barcode channel are a alternative rock band from Cambridge. The band consists of James Cox (vocals, guitar, programming),
-      Mike Nicoll (bass, vocals) and Rob Mathers (guitar, drum machines, backing vocals). Barcode Channel play post punk, angular
-      guitar driven songs.
+      Barcode Channel are a post-punk three-piece from Cambridge, who write songs around angular guitar lines and programmed beats. While primarily inspired by artists such as  Radiohead, Bloc Party, Foals, Interpol and mclusky, the band draws inspiration from a wide range of genres, resulting in a diverse and unpredictable sound.
     </p>
     <p>
-      While primarily inspired by artists such as Bloc Party, Radiohead, Interpol and mclusky, the band
-      draws inspiration from a wide range of genres.
-    </p>
-    <p>
-      The band are currently writing and recording in a makeshift home studio, and plan to start gigging soon.
+      The band have a strong DIY ethic and released their bedroom-recorded debut E.P. <%= link_to "A Ticket Out", "http://barcodechannel.bandcamp.com"  %> in December 2010
     </p>
   </div>
   <div class="post_title">
@@ -22,7 +16,10 @@
   <div class="post_body">
     <p>
     <ul>
-      <li><a href="http://myspace.com/barcodechannel">Barcode Channel on Myspace</a></li>
+      <li><a href="http://www.facebook.com/pages/Barcode-Channel/126967277330061">Facebook</a></li>
+      <li><a href="http://barcodechannel.bandcamp.com">Bandcamp</a></li>
+      <li><a href="http://soundcloud.com/barcode-channel">SoundCloud</a></li>
+      <li><a href="http://myspace.com/barcodechannel">Myspace</a></li>
       <li><a href="http://last.fm/music/Barcode+Channel">Barcode Channel on Last FM</a></li>
     </ul>
     </p>
