--- a/app/views/static/bio.html.erb
+++ b/app/views/static/bio.html.erb
@@ -1,6 +1,6 @@
 <div class="news_post">
   <div class="post_title">
-    About Barcode Channel
+    <h2>About Barcode Channel</h2>
   </div>
   <div class="post_body">
     <p>
@@ -11,7 +11,7 @@
     </p>
   </div>
   <div class="post_title">
-    Links
+    <h2>Links</h2>
   </div>
   <div class="post_body">
     <p>
@@ -25,7 +25,7 @@
     </p>
   </div>
   <div class="post_title">
-    Contact
+    <h2>Contact</h2>
   </div>
   <div class="post_body">
     If you'd like to get in contact with us, you can email us at: <br/>
