Fixed up the wording

--- a/app/views/static/bio.html.erb
+++ b/app/views/static/bio.html.erb
@@ -23,7 +23,7 @@
 
       <h4>We don't have a drummer</h4>
       <p>
-        We started rehearsing without a drummer due to being unable to find one in Cambridge. However, working with a laptop afforded us extra flexibility to experiment with electronic drums and instrument overdubs. This has become an important part of how we create.
+        We started rehearsing without a drummer due to being unable to find one. However, working with a laptop afforded us extra flexibility to experiment with electronic drums and instrument overdubs. This has become an important part of how we create.
       </p>
 
       <h4>We like to do it ourselves</h4>
