Made the about page purdier

--- a/app/views/static/bio.html.erb
+++ b/app/views/static/bio.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="post_body">
     <p>
-      We are Barcode Channel. We write songs around angular guitar lines and programmed beats, drawing influence from artists such as Radiohead, Foals, Bloc Party and Interpol.
+      We are <b>Barcode Channel</b>. We write songs around angular guitar lines and programmed beats, drawing influence from artists such as <b>Radiohead</b>, <b>Foals</b>, <b>Bloc Party</b> and <b>Interpol</b>.
     </p>
     <p>
       Some things that make us who we are:
